feat: Updates for Dec 21 (Mobile First UI, RSS Feeds, Security Enhancements)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
     image: podcast-ad-remover
     restart: unless-stopped
     ports:
-      - "8000:8000"
+      - '8000:8000'
     volumes:
       - ./data:/data
+      - .:/app
     environment:
-      - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - GEMINI_API_KEY=
       - LOG_LEVEL=INFO
